--- a/Transformers_exercise.ipynb
+++ b/Transformers_exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPE2hBpa1EBSWVhow9pVZMF",
+      "authorship_tag": "ABX9TyPuJdoVqAwyie27F8DWhmcQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -253,6 +253,25 @@
       ],
       "metadata": {
         "id": "1qMORvBC34f0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch.nn.functional as F\n",
+        "class ClassifierHead(nn.Module):\n",
+        "  def __init__(self, d_model,num_classes):\n",
+        "    super().__init__()\n",
+        "    self.linear = nn.Linear(d_model,num_classes)\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    logits = self.linear(x)\n",
+        "    return F.log_softmax(logits,dim = -1)\n"
+      ],
+      "metadata": {
+        "id": "-A-Cn2RrByw0"
       },
       "execution_count": null,
       "outputs": []
